--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,11 @@ h1 {
 p {
     color: slateblue;
     text-align: left;
+    column-count: 3;
 }
 
 div {
     color: orange;
+    border: 4px solid crimson;
+    padding: 24px;
 }
