Making span a block element using display attribute in css

--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,14 @@ h1 {
 p {
     color: slateblue;
     text-align: left;
-    column-count: 3;
 }
 
 div {
     color: orange;
     border: 4px solid #00c69b;
     padding: 24px;
+}
+
+span {
+    display: block;
 }
