--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,7 @@ h1 {
     font-family: Helvetica, sans-serif;
 }
 
-p {
-    color: slateblue;
-    text-align: left;
-}
-
-p.error {
+/* p.error {
     color: red;
 }
 
@@ -28,5 +23,10 @@ p.success.feedback {
 
 div#content {
     background-color: rgb(245, 255, 239);
-    padding: 24px;
+    padding: 16px;
+    margin: 24px;
+} */
+
+div p {
+    color: purple;
 }
