--- a/html5_semantics/styles.css
+++ b/html5_semantics/styles.css
@@ -1,3 +1,9 @@
+body, ul, li, h1, h2, a {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 header {
     background-color: #F63232;
     padding: 20px;
@@ -13,7 +19,7 @@ nav {
     background-color: #f4f4f4;
     padding: 20px;
     position: sticky;
-    top: 148px;
+    top: 104px;
 }
 
 nav li {
