--- a/html5_semantics/styles.css
+++ b/html5_semantics/styles.css
@@ -51,6 +51,14 @@ header h1 {
     border-radius: 50px;
 }
 
+main {
+    max-width: 100%;
+    width: 1200px;
+    margin: 80px auto;
+    padding: 0 40px;
+    box-sizing: border-box;
+}
+
 .banner {
     position: relative;
 }
