--- a/html5_semantics/styles.css
+++ b/html5_semantics/styles.css
@@ -69,6 +69,22 @@ article p {
     color: #4b4b4b;
 }
 
+.images {
+    text-align: center;
+    margin: 80px 0;
+    white-space: nowrap;
+}
+
+.images li {
+    display: inline-block;
+    width: 40%;
+    margin: 20px 5%;
+}
+
+.images li img {
+    max-width: 100%;
+}
+
 .banner {
     position: relative;
 }
