--- a/html5_semantics/styles.css
+++ b/html5_semantics/styles.css
@@ -165,3 +165,19 @@ article p::first-line {
 p::selection {
     background-color: pink;
 }
+
+@media screen and (max-width: 800px) {
+    header {
+        background-color: #F63232;
+        padding: 8px;
+    } 
+
+    header h1 {
+        font-size: 1.2em;
+        color: white;
+        border: 4px solid white;
+        padding: 6px 12px;
+        display: inline-block;
+        border-radius: 50px;
+    }
+}
