--- a/html5_semantics/styles.css
+++ b/html5_semantics/styles.css
@@ -180,15 +180,6 @@ p::selection {
         display: inline-block;
         border-radius: 50px;
     }
-
-    .banner .welcome {
-        background-color: #FEB614;
-        color: white;
-        padding: 16px;
-        position: absolute;
-        left: 0;
-        top: 38%;
-    }
     
     .banner h2 {
         font-size: 24px;
@@ -196,5 +187,14 @@ p::selection {
     
     .banner h2 span {
         font-size: 1.2em;
+    }
+
+    nav {
+        padding: 16px;
+        top: 58px;
+    }
+    
+    nav li {
+        font-size: 16px;
     }
 }
