--- a/html5_semantics/styles.css
+++ b/html5_semantics/styles.css
@@ -174,10 +174,8 @@ p::selection {
 
     header h1 {
         font-size: 1.2em;
-        color: white;
         border: 4px solid white;
         padding: 6px 12px;
-        display: inline-block;
         border-radius: 50px;
     }
     
@@ -196,5 +194,37 @@ p::selection {
     
     nav li {
         font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 440px) {
+    header {
+        background-color: #F63232;
+        padding: 4px;
+    } 
+
+    header h1 {
+        font-size: 1em;
+        border: 2px solid white;
+        padding: 4px 10px;
+        margin: 4px;
+        border-radius: 50px;
+    }
+    
+    .banner h2 {
+        font-size: 16px;
+    }
+    
+    .banner h2 span {
+        font-size: 1em;
+    }
+
+    nav {
+        padding: 12px;
+        top: 40px;
+    }
+    
+    nav li {
+        font-size: 12px;
     }
 }
